--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,23 @@ input[type=date], input[type=datetime-local], input[type=email], input[type=numb
     margin-top: 50px;
     width: 100%;
 }
-
+.herobanner .btn.btn-success {
+    min-width: 12%;
+    max-width: 12%;
+    margin-left: 44%;
+}
+@media screen and (max-width: 992px){
+    .herobanner .btn.btn-success {
+        min-width: 20%;
+        max-width: 20%;
+        margin-left: 40%;
+    }
+}
+@media screen and (max-width: 360px){
+    .herobanner .btn.btn-success {
+        min-width: 25%;
+    }
+}
 .single_home h1{
     font-weight: 800;
     letter-spacing: 2px;
@@ -244,6 +260,11 @@ input[type=date], input[type=datetime-local], input[type=email], input[type=numb
     50% { opacity: 0; -webkit-transform: translateX(0px); }
     80% { opacity: 0; }
     100% { opacity: 0; }
+}
+@media only screen and (max-width : 400px) {
+    .slidingHorizontal {
+        font-size: 4rem;
+    }
 }
 
 /*==========================================================
@@ -792,7 +813,14 @@ input[type=submit]:hover {
     border-bottom: 2px solid #000;
 }
 
+.single_employee p {
+    margin-left: 20px;
+    margin-right: 20px;
 
+}
+.single_employee img{
+    padding-left: 20px;
+}
 
 
 /*=====================================================================
